--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,14 +1,14 @@
 <mat-tab-group>
-  <mat-tab label="One">
+  <mat-tab label="Tab 1">
     <h1>embedded bokeh chart component 1</h1>
     <ng-template matTabContent>
-    <bokeh-chart></bokeh-chart>
+    <app-bokeh-chart></app-bokeh-chart>
   </ng-template>
   </mat-tab>
-  <mat-tab label="Two">
+  <mat-tab label="Tab 2">
     <h1>embedded bokeh chart component 2</h1>
     <ng-template matTabContent>
-      <bokeh-chart></bokeh-chart>
+      <app-bokeh-chart></app-bokeh-chart>
     </ng-template>
   </mat-tab>
 </mat-tab-group>
